# rag-knowledgebot

./: .env.example  .gitignore  README.md  bot_prompt.md  pyproject.toml
chatbot/: bot.py  config.py  main.py
common/: config.py  prompt_loader.py  qdrant_client.py
n8n/: Accurate Assistant.json
pipeline/: config.py  ingest_documents.py
